--- a/eyes_on_the_road/android/app/src/main/AndroidManifest.xml
+++ b/eyes_on_the_road/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <use
     <application
         android:label="eyes_on_the_road"
         android:name="${applicationName}"
