--- a/eyes_on_the_road/pubspec.yaml
+++ b/eyes_on_the_road/pubspec.yaml
@@ -35,7 +35,10 @@ dependencies:
     # The following adds the Cupertino Icons font to your application.
     # Use with the CupertinoIcons class for iOS style icons.
     cupertino_icons: ^1.0.8
-    socket_io_client: ^2.0.0
+    socket_io_client: ^2.0.3+1
+    provider: ^6.0.5
+    http: ^1.1.0
+    flutter_dotenv: ^5.1.0
 
 dev_dependencies:
     flutter_test:
@@ -53,17 +56,15 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-    assets:
-        - assets/images/street.jpg
     # The following line ensures that the Material Icons font is
     # included with your application, so that you can use the icons in
     # the material Icons class.
     uses-material-design: true
 
     # To add assets to your application, add an assets section, like this:
-    # assets:
-    #   - images/a_dot_burr.jpeg
-    #   - images/a_dot_ham.jpeg
+    assets:
+        - .env
+        - assets/images/street.jpg
 
     # An image asset can refer to one or more resolution-specific "variants", see
     # https://flutter.dev/to/resolution-aware-images
