--- a/eyes_on_the_road/pubspec.yaml
+++ b/eyes_on_the_road/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
     # Use with the CupertinoIcons class for iOS style icons.
     cupertino_icons: ^1.0.8
     socket_io_client: ^2.0.0
+    camera: ^0.11.1
+    path_provider: ^2.1.5
+    path: ^1.9.1
 
 dev_dependencies:
     flutter_test:
