--- a/eyes_on_the_road/ios/Runner/Info.plist
+++ b/eyes_on_the_road/ios/Runner/Info.plist
@@ -28,6 +28,10 @@
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>Speech recognition is used to control the app with your voice.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Microphone is used to record audio.</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
