--- a/eyes_on_the_road/pubspec.yaml
+++ b/eyes_on_the_road/pubspec.yaml
@@ -42,9 +42,7 @@ dependencies:
     connectivity_plus: ^6.1.3
     permission_handler: ^11.0.0
     geolocator: ^13.0.2
-
-
-
+    shared_preferences: ^2.5.2
 
 dev_dependencies:
     flutter_test:
