--- a/eyes_on_the_road/pubspec.yaml
+++ b/eyes_on_the_road/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
     google_fonts: ^6.2.1
 
     speech_to_text: ^6.3.0
+    text_to_speech: ^0.2.3
 
     # The following adds the Cupertino Icons font to your application.
     # Use with the CupertinoIcons class for iOS style icons.
