--- a/eyes_on_the_road/pubspec.yaml
+++ b/eyes_on_the_road/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
     permission_handler: ^11.0.0
     geolocator: ^13.0.2
     shared_preferences: ^2.5.2
+    sensors_plus: ^6.1.1
 
 dev_dependencies:
     flutter_test:
