--- a/eyes_on_the_road/android/app/src/main/AndroidManifest.xml
+++ b/eyes_on_the_road/android/app/src/main/AndroidManifest.xml
@@ -50,9 +50,10 @@
         <intent>
             <action android:name="android.intent.action.TTS_SERVICE" />
         </intent>
-
+        <intent>
+            <action android:name="android.speech.RecognitionService" />
+        </intent>
         <package android:name="com.google.android.tts" />
         <package android:name="com.samsung.SMT" />
-
     </queries>
 </manifest>
