Added App Icon and modified README for application
As title

--- a/eyes_on_the_road/pubspec.yaml
+++ b/eyes_on_the_road/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
     geolocator: ^13.0.2
     shared_preferences: ^2.5.2
     sensors_plus: ^6.1.1
+    flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
     flutter_test:
@@ -70,6 +71,7 @@ flutter:
     assets:
         - .env
         - assets/images/street.jpg
+        - assets/images/icon.png
 
     # An image asset can refer to one or more resolution-specific "variants", see
     # https://flutter.dev/to/resolution-aware-images
@@ -96,3 +98,8 @@ flutter:
     #
     # For details regarding fonts from package dependencies,
     # see https://flutter.dev/to/font-from-package
+flutter_launcher_icons:
+    android: true
+    ios: true
+    image_path: "assets/images/icon.png"
+    remove_alpha_ios: true # Recommended for iOS icons
